--- a/app/views/menageinfos.html
+++ b/app/views/menageinfos.html
@@ -4,7 +4,7 @@
 			<md-card flex>
 				<md-card-header md-colors="::{backgroundColor: 'greyTheme-primary-400'}">
 					<md-card-header-text>
-						<span class="md-title">Ménage John</span>
+						<span class="md-title">Ménage DUPONT</span>
 						<span class="md-subhead">Informations générales</span>
 					</md-card-header-text>
 				</md-card-header>
@@ -14,7 +14,7 @@
 					<md-list-item class="md-2-line">
 						<md-icon md-svg-icon="action:ic_assignment_ind_24px" class="name"></md-icon>
 						<div class="md-list-item-text">
-							<h3>Natalie Portman</h3>
+							<h3>Régis RAMEL</h3>
 							<p>Service 1</p> 
 						</div>
 					</md-list-item>
@@ -75,7 +75,7 @@
 				<md-card>
 					<md-card-title md-colors="::{backgroundColor: 'greyTheme-primary-200'}">
 						<md-card-title-text>
-							<span class="md-headline">John Travolta</span>
+							<span class="md-headline">Pierre DUPONT</span>
 							<span class="md-subhead">Chef de famille</span>
 						</md-card-title-text>
 					</md-card-title>
@@ -85,6 +85,20 @@
 							<div class="md-list-item-text">
 								<h3>06 31 52 89 20</h3>
 								<p>Numéro de téléphone</p> 
+							</div>
+						</md-list-item>
+						<md-list-item class="md-2-line">
+							<md-icon md-svg-icon="communication:ic_location_on_24px" class="name"></md-icon>
+							<div class="md-list-item-text">
+								<h3>Saint Martin d'Hères</h3>
+								<p>Ville de naissance</p> 
+							</div>
+						</md-list-item>
+						<md-list-item class="md-2-line">
+							<md-icon md-svg-icon="communication:ic_phone_24px" class="name"></md-icon>
+							<div class="md-list-item-text">
+								<h3>Marié</h3>
+								<p>Statut matrimonial</p> 
 							</div>
 						</md-list-item>
 					</md-card-content>
@@ -99,10 +113,33 @@
 				<md-card>
 					<md-card-title md-colors="::{backgroundColor: 'greyTheme-primary-200'}">
 						<md-card-title-text>
-							<span class="md-headline">Janette Travolta</span>
-							<!-- <span class="md-subhead">Nom de JF : Travoltette</span> -->
+							<span class="md-headline">Martine DUPONT</span>
+							<span class="md-subhead">Nom de naissance : RAINAUT</span>
 						</md-card-title-text>
 					</md-card-title>
+					<md-card-content>
+						<md-list-item class="md-2-line">
+							<md-icon md-svg-icon="communication:ic_phone_24px" class="name"></md-icon>
+							<div class="md-list-item-text">
+								<h3>06 25 65 23 45</h3>
+								<p>Numéro de téléphone</p> 
+							</div>
+						</md-list-item>
+						<md-list-item class="md-2-line">
+							<md-icon md-svg-icon="communication:ic_location_on_24px" class="name"></md-icon>
+							<div class="md-list-item-text">
+								<h3>Lyon</h3>
+								<p>Ville de naissance</p> 
+							</div>
+						</md-list-item>
+						<md-list-item class="md-2-line">
+							<md-icon md-svg-icon="communication:ic_phone_24px" class="name"></md-icon>
+							<div class="md-list-item-text">
+								<h3>Marié</h3>
+								<p>Statut matrimonial</p> 
+							</div>
+						</md-list-item>
+					</md-card-content>
 					<md-card-actions layout="row" layout-align="end center">
 						<md-button class="md-primary md-raised" ng-click="showTabDialog($event)" >
 				      Plus de détails
