Hide main toolbar on login view + remove hamburger menu icon on it

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -29,7 +29,7 @@
         </form>
       </md-card-content>
       <md-card-actions layout="column" layout-align="center">
-        <md-button ng-click="log()" ng-disabled="loginForm.$invalid" class="md-raised md-cornered md-primary">Se connecter</md-button>
+        <md-button ng-click="go('/')" ng-disabled="loginForm.$invalid" class="md-raised md-cornered md-primary">Se connecter</md-button>
       </md-card-actions>
     </md-card>
 
