Login with back-end almost done
BUG: CORS problem
Workaround: Chrome extension to enable CORS requests

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -139,6 +139,10 @@ md-card-header-text > h2 {
   width: 64px;
 }*/
 
+#loadingLogin {
+  margin: auto;
+}
+
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
