--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -144,6 +144,15 @@ md-card-header-text > h2 {
 }
 
 
+.png-icon{
+  margin: -15px -15px;
+  padding: 0;
+  display: inline-block;
+  background-repeat: no-repeat no-repeat;
+  pointer-events: none;
+}
+
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
   .container {
