Pass parameters through URL done !

--- a/app/views/menage.html
+++ b/app/views/menage.html
@@ -6,7 +6,7 @@
 					<md-card-header-text>
 						<span class="md-title">Ménage DUPONT</span>
 						<span class="md-subhead">Informations générales</span>
-						<md-button style="position: absolute; left: 260px;" class="md-icon-button" aria-label="Search" ng-click="go('/menageInfos')">
+						<md-button style="position: absolute; left: 260px;" class="md-icon-button" aria-label="Search" ng-click="go('/menageInfos/1')">
 		          <md-icon md-svg-icon="action:ic_launch_24px" aria-label="Search"></md-icon>
 		        </md-button>
 					</md-card-header-text>
