--- a/app/views/home.html
+++ b/app/views/home.html
@@ -59,7 +59,7 @@
             <md-subheader class="md-no-sticky">Urgent</md-subheader>
             <md-card>
               <md-list>
-               <md-list-item class="md-2-line" ng-repeat="elem in ['DUPONT', 'RAINAUT', 'NOUGUIER', 'NIOGRET', 'LECORPS'] track by $index" ng-click="go('/menage')">
+               <md-list-item class="md-2-line" ng-repeat="elem in ['DUPONT', 'RAINAUT', 'NOUGUIER', 'NIOGRET', 'LECORPS'] track by $index" ng-click="go('/menage/1')">
                   <div class="md-list-item-text compact">
                     <h3>Ménage {{elem}}</h3>
                     <p>Date d'échéance la plus proche: 1{{$index+1}}/12/2016</p>
@@ -73,7 +73,7 @@
             <md-subheader class="md-no-sticky">Autres éléments</md-subheader>
             <md-card>
               <md-list>
-               <md-list-item class="md-2-line" ng-repeat="elem in ['MARTIN','BERNARD','THOMAS','PETIT','ROBERT','RICHARD','DURAND','DUBOIS','MOREAU','LAURENT','SIMON','MICHEL','LEFEBVRE','ROUX','DAVID','MOREL','GIRARD','BONNET','DUPONT','LAMBERT','FONTAINE'] track by $index" ng-click="go('/menage')">
+               <md-list-item class="md-2-line" ng-repeat="elem in ['MARTIN','BERNARD','THOMAS','PETIT','ROBERT','RICHARD','DURAND','DUBOIS','MOREAU','LAURENT','SIMON','MICHEL','LEFEBVRE','ROUX','DAVID','MOREL','GIRARD','BONNET','DUPONT','LAMBERT','FONTAINE'] track by $index" ng-click="go('/menage/2')">
                   <div class="md-list-item-text compact">
                     <h3>Ménage {{elem}}</h3>
                     <p>Date d'échéance la plus proche: {{$index+10}}/01/2017</p>
