--- a/app/views/menage.html
+++ b/app/views/menage.html
@@ -4,7 +4,7 @@
 			<md-card flex>
 				<md-card-header md-colors="::{backgroundColor: 'greyTheme-primary-400'}">
 					<md-card-header-text>
-						<span class="md-title">Ménage DUPONT</span>
+						<span class="md-title">Ménage {{individus[0].nomUsage | uppercase}}</span>
 						<span class="md-subhead">Informations générales</span>
 						<md-button style="position: absolute; left: 260px;" class="md-icon-button" aria-label="Search" ng-click="go('/menageInfos/1')">
 		          <md-icon md-svg-icon="action:ic_launch_24px" aria-label="Search"></md-icon>
