--- a/app/views/menage.html
+++ b/app/views/menage.html
@@ -6,7 +6,7 @@
 					<md-card-header-text>
 						<span class="md-title">Ménage {{individus[0].nomUsage | uppercase}}</span>
 						<span class="md-subhead">Informations générales</span>
-						<md-button style="position: absolute; left: 260px;" class="md-icon-button" aria-label="Search" ng-click="go('/menageInfos/1')">
+						<md-button style="position: absolute; left: 260px;" class="md-icon-button" aria-label="Search" ng-click="go('/menageInfos/'+idMenage)">
 		          <md-icon md-svg-icon="action:ic_launch_24px" aria-label="Search"></md-icon>
 		        </md-button>
 					</md-card-header-text>
@@ -18,7 +18,7 @@
 						<md-icon md-svg-icon="action:ic_assignment_ind_24px" class="name"></md-icon>
 						<div class="md-list-item-text">
 							<h3>{{menageInfos.referant.nom | uppercase}} {{menageInfos.referant.prenom}}</h3>
-							<p>Service 1</p> 
+							<p>{{menageInfos.referant.service.libelle}}</p> 
 						</div>
 					</md-list-item>
 					<md-divider ng-if="!$last"></md-divider>
