Search menage better and rceate individu done !

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -98,7 +98,7 @@
                   </md-tooltip>
                   <md-icon md-svg-src="social:ic_group_add_24px" aria-label="Ajouter un ménage"></md-icon>
                 </md-button>
-                <md-button aria-label="Individu" class="md-fab md-raised md-mini">
+                <md-button ng-click="showCreateIndividu($event, false)" aria-label="Individu" class="md-fab md-raised md-mini">
                   <md-tooltip md-direction="left" md-visible="tooltipVisible" md-autohide="false">
                     Individu
                   </md-tooltip>
