--- a/app/views/login.html
+++ b/app/views/login.html
@@ -11,14 +11,14 @@
             <label>Nom d'utilisateur</label>
             <input required type="text" id="username" name="username" ng-model="username" md-autofocus>
             <div ng-messages="loginForm.username.$error">
-              <div ng-message="required">This is required.</div>
+              <div ng-message="required">Ce champ est requis</div>
             </div>
           </md-input-container>
           <md-input-container class="md-block">
             <label>Mot de passe</label>
             <input required type="password" id="password" name="password" ng-model="password">
             <div ng-messages="loginForm.password.$error">
-              <div ng-message="required">This is required.</div>
+              <div ng-message="required">Ce champ est requis</div>
             </div>
           </md-input-container>
           <!-- <md-input-container class="md-block">
