--- a/app/views/home.html
+++ b/app/views/home.html
@@ -57,11 +57,24 @@
             </md-toolbar>
 
             <md-subheader class="md-no-sticky">Urgent</md-subheader>
-            <md-card>
+            <!-- <md-card>
               <md-list>
                <md-list-item class="md-2-line" ng-repeat="elem in ['DUPONT', 'RAINAUT', 'NOUGUIER', 'NIOGRET', 'LECORPS'] track by $index" ng-click="go('/menage/1')">
                   <div class="md-list-item-text compact">
                     <h3>Ménage {{elem}}</h3>
+                    <p>Date d'échéance la plus proche: 1{{$index+1}}/12/2016</p>
+                  </div>
+                  <md-icon class="taskNotOk" md-svg-icon="alert:ic_error_24px" aria-label="task not ok icon"></md-icon>
+                  <md-divider ng-if="!$last"></md-divider>
+               </md-list-item>
+              </md-list>
+            </md-card> -->
+
+            <md-card>
+              <md-list>
+               <md-list-item class="md-2-line" ng-repeat="elem in allMenages track by $index" ng-click="go('/menage/'+elem.id)">
+                  <div class="md-list-item-text compact">
+                    <h3>Ménage {{elem.nomChefMenage}}</h3>
                     <p>Date d'échéance la plus proche: 1{{$index+1}}/12/2016</p>
                   </div>
                   <md-icon class="taskNotOk" md-svg-icon="alert:ic_error_24px" aria-label="task not ok icon"></md-icon>
