--- a/app/views/menagecreation.html
+++ b/app/views/menagecreation.html
@@ -78,7 +78,7 @@
 				</div>
 			</md-toolbar>
 
-			<md-input-container class="md-block" layout-align="space-around center">
+			<md-input-container class="md-block">
 			  <label>Nom du chef de famille</label>
 			  <input required ng-model="menage.nomChefMenage" md-maxlength="20" md-select-on-focus></input>
 			</md-input-container>
