--- a/app/views/menage.html
+++ b/app/views/menage.html
@@ -4,7 +4,7 @@
 			<md-card flex>
 				<md-card-header md-colors="::{backgroundColor: 'greyTheme-primary-400'}">
 					<md-card-header-text>
-						<span class="md-title">Ménage {{individus[0].nomUsage | uppercase}}</span>
+						<span class="md-title">Ménage {{menageInfos.nomChefMenage | uppercase}}</span>
 						<span class="md-subhead">Informations générales</span>
 						<md-button style="position: absolute; left: 260px;" class="md-icon-button" aria-label="Search" ng-click="go('/menageInfos/'+idMenage)">
 		          <md-icon md-svg-icon="action:ic_launch_24px" aria-label="Search"></md-icon>
@@ -17,8 +17,8 @@
 					<md-list-item class="md-2-line">
 						<md-icon md-svg-icon="action:ic_assignment_ind_24px" class="name"></md-icon>
 						<div class="md-list-item-text">
-							<h3>{{menageInfos.referant.nom | uppercase}} {{menageInfos.referant.prenom}}</h3>
-							<p>{{menageInfos.referant.service.libelle}}</p> 
+							<h3>{{menageInfos.referant.nom | uppercase}} {{menageInfos.referant.prenom || "Aucun référant affecté"}}</h3>
+							<p>{{menageInfos.referant.service.libelle || "Aucun service"}}</p> 
 						</div>
 					</md-list-item>
 					<md-divider ng-if="!$last"></md-divider>
@@ -26,10 +26,9 @@
 					<md-list-item class="md-2-line md-long-text">
 						<md-icon md-svg-icon="action:ic_home_24px" class="name"></md-icon>
 						<div class="md-list-item-text">
-							<h3>Adresse</h3>
-							<p>
-								{{menageInfos.logement.adresse}}
-							</p>
+              <h3>Adresse</h3>
+							<p ng-if="!menageInfos.logement.adresse">{{menageInfos.adresseActuelle || "Aucune adresse renseignée"}}</p>
+              <p ng-if="!menageInfos.adresseActuelle">{{menageInfos.logement.adresse || "Aucune adresse renseignée"}}</p>
 						</div>
 					</md-list-item>
 					<md-list-item class="md-2-line md-long-text">
@@ -43,7 +42,7 @@
 								Direction: {{menageInfos.logement.direction || "Aucune"}}
 							</p>
 							<p>
-								Etage n°{{menageInfos.logement.etage}}
+								Etage n°{{menageInfos.logement.etage || " non renseigné"}}
 							</p>
 						</div>
 					</md-list-item>
@@ -128,15 +127,29 @@
       		<md-subheader class="md-no-sticky">Urgent</md-subheader>
       		<md-card>
       			<md-list>
-      				<md-list-item class="md-2-line" ng-repeat="elem in [1,2,3] track by $index">
+      				<md-list-item class="md-2-line" ng-repeat="acte in actes track by $index">
       					<div class="md-list-item-text compact">
-      						<h3 ng-if="$index % 2 == 0">Acte n°{{elem}}</h3>
-      						<h3 ng-if="$index % 2 != 0">Prestation n°{{elem}}</h3>
-      						<p>Date d'échéance: 10/12/2016</p>
+      						<h3>Acte n°{{$index+1}}: {{acte.acte.libelle}}</h3>
+      						<p>Statut: {{acte.statut}}</p>
       					</div>
       					<md-icon class="taskNotOk" md-svg-icon="alert:ic_error_24px" aria-label="task not ok icon"></md-icon>
-      					<md-divider ng-if="!$last"></md-divider>
+      					<md-divider></md-divider>
       				</md-list-item>
+              <md-list-item class="md-2-line" ng-repeat="prestation in prestations track by $index">
+                <div class="md-list-item-text compact">
+                  <h3>Prestation n°{{$index+1}}: {{prestation.prestation.libelle}}</h3>
+                  <p>Statut: {{prestation.statut}}</p>
+                </div>
+                <md-icon class="taskNotOk" md-svg-icon="alert:ic_error_24px" aria-label="task not ok icon"></md-icon>
+                <md-divider ng-if="!$last"></md-divider>
+              </md-list-item>
+              <md-list-item class="md-2-line" ng-if="!prestations.length && !actes.length">
+                <div class="md-list-item-text compact">
+                  <h3>Aucun élément urgent</h3>
+                </div>
+                <md-icon class="taskOk" md-svg-icon="action:ic_check_circle_24px" aria-label="task ok icon"></md-icon>
+                <md-divider ng-if="!$last"></md-divider>
+              </md-list-item>
       			</md-list>
       		</md-card>
 
@@ -145,7 +158,8 @@
       			<md-list>
       				<md-list-item class="md-2-line" ng-repeat="elem in [1,2,3,4,5,6,7,8,9] track by $index">
       					<div class="md-list-item-text compact">
-      						<h3>Acte n°{{elem}}</h3>
+      						<h3 ng-if="$index % 2 == 0">Acte n°{{elem}}</h3>
+                  <h3 ng-if="$index % 2 != 0">Prestation n°{{elem}}</h3>
       						<p>Date d'échéance: 0{{elem}}/01/2017</p>
       					</div>
       					<md-divider ng-if="!$last"></md-divider>
